// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check with 0 expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        0
      </span>
       
      expenses
       totalling 
      <span>
        $0.00
      </span>
    </h1>
    <div
      className="page-hader__actions"
    >
      <Link
        className="button"
        to="create"
      >
        Create expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`check with 1 expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $1.23
      </span>
    </h1>
    <div
      className="page-hader__actions"
    >
      <Link
        className="button"
        to="create"
      >
        Create expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`check with 1 expenses 2`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
       totalling 
      <span>
        $234.00
      </span>
    </h1>
    <div
      className="page-hader__actions"
    >
      <Link
        className="button"
        to="create"
      >
        Create expense
      </Link>
    </div>
  </div>
</div>
`;
